--- a/package.json
+++ b/package.json
@@ -1,13 +1,34 @@
 {
-  "name": "@once-ui-system/nextjs-starter",
-  "version": "0.7",
+  "name": "once-ui",
+  "version": "1.0.0",
+  "description": "NPM package of Once UI for Next.js",
+  "keywords": ["once-ui", "react", "nextjs", "scss", "design system", "design framework", "nextjs design system"],
+  "author": "Once UI",
+  "license": "MIT",
+  "main": "dist/index.js",
+  "exports": {
+    ".": "./dist/index.js",
+    "./components": "./dist/components/index.js",
+    "./context": "./dist/context/index.js",
+    "./modules": "./dist/modules/index.js",
+    "./icons": "./dist/icons/index.js",
+    "./types": "./dist/types/index.js",
+    "./interfaces": "./dist/interfaces/index.js",
+    "./styles": "./dist/styles/index.js",
+    "./utils": "./dist/utils/index.js",
+    "./hooks": "./dist/hooks/index.js"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "export": "next export",
     "build": "next build",
     "start": "next start",
     "biome-write": "npx @biomejs/biome format --write .",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rimraf dist",
+    "build:package": "npm run clean && tsc --project tsconfig.build.json && npm run copy-files",
+    "copy-files": "node scripts/copy-files.js",
+    "prepare": "npm run build:package"
   },
   "dependencies": {
     "@floating-ui/react-dom": "^2.1.1",
@@ -33,6 +54,7 @@
     "@types/react-dom": "19.0.2",
     "postcss-custom-media": "^10.0.7",
     "postcss-flexbugs-fixes": "^5.0.2",
+    "rimraf": "^5.0.5",
     "typescript": "5.8.2"
   },
   "overrides": {
