--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -75,12 +75,14 @@
     "classnames": "^2.5.1",
     "compressorjs": "^1.2.1",
     "date-fns": "^4.1.0",
-    "next": "15.2.3",
     "prismjs": "^1.30.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
     "react-icons": "^5.2.1",
-    "recharts": "^2.15.1",
+    "recharts": "^2.15.1"
+  },
+  "peerDependencies": {
+    "next": ">=13.4",
+    "react": ">=18",
+    "react-dom": ">=18",
     "sass": "^1.77.6",
     "sharp": "^0.33.4"
   },
