--- a/packages/core/tsconfig.build.json
+++ b/packages/core/tsconfig.build.json
@@ -6,10 +6,14 @@
     "declarationMap": true,
     "sourceMap": true,
     "noEmit": false,
-    "module": "CommonJS",
+    "module": "ES2022",
     "moduleResolution": "node",
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "skipLibCheck": true,
+    "isolatedModules": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
-  "exclude": ["node_modules", "**/*.test.ts", "**/*.test.tsx", "**/*.stories.tsx", "dist"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "**/*.test.*", "**/*.stories.*"]
 }
