--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,22 +1,22 @@
 {
   "compilerOptions": {
-    "typeRoots": ["./types", "./node_modules/@types"],
+    "target": "ES2020",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "allowJs": true,
+    "strict": true,
+    "skipLibCheck": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
     "declaration": true,
     "outDir": "./dist",
+    "typeRoots": ["./types", "./node_modules/@types"],
     "paths": {
       "@/*": ["./src/*"]
-    },
-    "target": "ES2017"
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "scss.d.ts"],
   "exclude": ["node_modules", "dist"]
