--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,17 +1,19 @@
 {
   "name": "@once-ui-system/docs",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "rimraf .next/cache && next build",
+    "dev": "next dev --turbopack",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export"
+    "biome-write": "npx @biomejs/biome format --write .",
+    "watch": "tsc --watch --project tsconfig.build.json"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
     "@next/mdx": "^15.3.1",
-    "@once-ui-system/core": "^1.4.17",
+    "@once-ui-system/core": "workspace:*",
     "@vercel/analytics": "^1.3.1",
     "classnames": "^2.5.1",
     "eslint": "^9.21.0",
