--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   },
   "devDependencies": {
     "turbo": "^1.12.0"
-  }
+  },
+  "engines": {
+    "node": "20.x"
+  },
+  "packageManager": "pnpm@9.12.3"
 }
