--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "private": true,
   "name": "once-ui-monorepo",
-  "workspaces": ["apps/*", "packages/*"],
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
     "dev": "turbo dev",
     "build": "turbo build"
   },
   "devDependencies": {
-    "turbo": "^1.12.0"
+    "turbo": "^1.13.4"
   },
   "engines": {
     "node": "20.x"
   },
-  "packageManager": "pnpm@9.12.3"
+  "packageManager": "pnpm@10.14.0"
 }
