--- a/apps/docs/vercel.json
+++ b/apps/docs/vercel.json
@@ -1,1 +1,5 @@
-{ "version": 2, "installCommand": "npx -y pnpm@10.14.0 -w install", "buildCommand": "npx -y pnpm@10.14.0 build" }
+{
+  "version": 2,
+  "installCommand": "npx -y pnpm@10.14.0 install",
+  "buildCommand": "pnpm build"
+}
