--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "engines": {
     "node": "20.x"
   },
-  "packageManager": "pnpm@10.14.0"
+  "packageManager": "pnpm@10.14.0",
+  "devDependencies": {
+    "turbo": "^2.5.6"
+  }
 }
