--- a/.npmrc
+++ b/.npmrc
@@ -1,11 +1,5 @@
-# Use symlinks instead of junctions on Windows
-symlink=true
-
 # Disable strict peer dependencies
 strict-peer-dependencies=false
 
-# Hoist all dependencies to the root node_modules
-shamefully-hoist=false
-
-# Use node-linker=hoisted to avoid Windows symlink issues
-node-linker=hoisted
+# Use shamefully-hoist for better Windows compatibility
+shamefully-hoist=true
