--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,6 +13,15 @@
   ],
   "author": "Once UI",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/once-ui-system/core.git",
+    "directory": "packages/core"
+  },
+  "bugs": {
+    "url": "https://github.com/once-ui-system/core/issues"
+  },
+  "homepage": "https://docs.once-ui.com",
   "main": "dist/index.js",
   "exports": {
     ".": {
