--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "prebuild": "pnpm --filter @once-ui-system/core build",
     "postinstall": "pnpm --filter @once-ui-system/core build",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "next lint",
     "export": "next export",
