--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "prebuild": "pnpm --filter @once-ui-system/core build",
     "postinstall": "pnpm --filter @once-ui-system/core build",
-    "build": "next build --webpack",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "export": "next export",
@@ -16,14 +16,14 @@
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
-    "@next/mdx": "^16.0.7",
+    "@next/mdx": "^15.5.7",
     "@once-ui-system/core": "workspace:*",
     "@vercel/analytics": "^1.3.1",
     "classnames": "^2.5.1",
     "eslint": "^9.21.0",
     "eslint-config-next": "15.5.4",
     "gray-matter": "^4.0.3",
-    "next": "^16.0.7",
+    "next": "^15.5.7",
     "next-mdx-remote": "^5.0.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
